# cpp-app-sketch-project

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
app/: main.cpp
cmake/: clang_tools.cmake  unit_test.cmake
include/misc/: factorial.h
src/misc/: factorial.cpp
tests/misc/: test_factorial.cpp
